--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 .idea
+**/*.class
+out/
 
 # Ignore Gradle build output directory
 build
+/app/out/
